add .gitignore for matiec and rebuild track

--- a/matiec/.gitignore
+++ b/matiec/.gitignore
@@ -1,3 +1,9 @@
+# ------------ matiec ------------
+iec_bison.hh
+iec_bison.cc
+iec_flex.cc
+*.Po
+
 # -------------- Cpp --------------
 # Prerequisites
 *.d
