--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,19 @@ editor/arduino/src/arduino.cpp
 editor/arduino/src/glueVars.c
 editor/arduino/src/plc_prog.st
 editor/examples/Blink/plc.xml
+editor/arduino/src/LOCATED_VARIABLES.h
+editor/arduino/examples/Baremetal/settings.json
+editor/arduino/examples/Baremetal/defines.h
+editor/arduino/examples/Baremetal/defines.h
+editor/arduino/examples/Baremetal/hals.json
+editor/arduino/examples/Baremetal/settings.json
+editor/arduino/src/arduino.cpp
+editor/arduino/src/config.c
+editor/arduino/src/config.h
+editor/arduino/src/glueVars.c
+editor/arduino/src/LOCATED_VARIABLES.h
+editor/arduino/src/plc_prog.st
+editor/arduino/src/POUS.c
+editor/arduino/src/POUS.h
+editor/arduino/src/Res0.c
+editor/arduino/src/VARIABLES.csv
