--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ __pycache__/
 
 # C extensions
 *.so
+*.o
+*.obj
+*.a
+*.in
+*.Po
 
 # Distribution / packaging
 .Python
@@ -137,3 +142,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+.DS_Store
+*~
+/openplc_editor.sh
